<resources>
    <string name="app_name">Product Mart</string>
    <string name="back">Back</string>
    <string name="products">Products</string>
    <string name="history">My Order History</string>
    <string name="product_img">Product Image</string>
    <string name="add">Add</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="checkout">Checkout</string>
    <string name="view_cart">View Cart</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="items_added">%1$s Items added</string>
    <string name="item_added">%1$s Item added</string>
    <string name="cart">Cart</string>
    <string name="continue_lbl">Continue</string>
    <string name="no_data">No data in the cart please select any products from the product page</string>
    <string name="offers_gifts"><![CDATA[Offers & Giftcards]]></string>
    <string name="two_offers">2 offers available</string>
    <string name="item_total">Item Total</string>
    <string name="service_charges">Services charges</string>
    <string name="total">Total</string>
    <string name="address">Address</string>
    <string name="new_address"><u>New Address</u></string>
    <string name="payment_methods">Payment Methods</string>
    <string name="new_payment"><u>New Card</u></string>
    <string name="place_order">Place Order</string>
    <string name="select">Select</string>
    <string name="thank_you">Thank you</string>
    <string name="order_placed">Your Order <b>#434456</b> has been placed successfully.</string>
    <string name="check_delivery">Please check the delivery status at</string>
    <string name="order_tracking"><u><b>Order Tracking</b></u></string>
    <string name="pages">Pages</string>
    <string name="go_to_order">Go To Order</string>
    <string name="review">Review</string>
    <string name="re_order">ReOrder</string>
    <string name="order_id">Order ID : #23r8531qw</string>
    <string name="order_details">Order Details</string>
    <string name="quantity">Quantity : </string>
    <string name="count_two">2</string>
</resources>
