<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/_255sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:contentDescription="@string/thank_you"
        android:src="@drawable/tick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_30sdp"
        android:fontFamily="@font/bold"
        android:text="@string/thank_you"
        android:textColor="@color/black"
        android:textSize="@dimen/_22sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/regular"
        android:text="@string/order_placed"
        android:textColor="@color/black"
        android:textSize="@dimen/_9sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/regular"
        android:text="@string/check_delivery"
        android:textColor="@color/black"
        android:textSize="@dimen/_9sdp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bold"
            android:text="@string/order_tracking"
            android:textColor="@color/yellow_text"
            android:textSize="@dimen/_9sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/regular"
            android:paddingLeft="@dimen/_3sdp"
            android:paddingRight="@dimen/_3sdp"
            android:text="@string/pages"
            android:textColor="@color/black"
            android:textSize="@dimen/_9sdp" />


    </LinearLayout>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/app_btn_bg"
        android:fontFamily="@font/bold"
        android:paddingLeft="@dimen/_35sdp"
        android:paddingRight="@dimen/_35sdp"
        android:text="@string/go_to_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp" />

</LinearLayout>
