<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_49sdp"
    android:background="@color/purple_700"
    android:elevation="@dimen/_5sdp"
    android:paddingLeft="@dimen/_15sdp"
    android:paddingRight="@dimen/_15sdp">

    <TextView
        android:id="@+id/items_added"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_15sdp"
        android:layout_centerVertical="true"
        android:fontFamily="@font/bold"
        android:text="@string/checkout"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_15sdp"
            android:fontFamily="@font/bold"
            android:text="@string/view_cart"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />

        <ImageView
            android:layout_width="@dimen/_17sdp"
            android:layout_height="@dimen/_15sdp"
            android:contentDescription="@string/right_arrow"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/right_arrow" />
    </LinearLayout>
</RelativeLayout>
