<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/continue_btn"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_11sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    android:gravity="start"
                    android:text="@string/address"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/new_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    android:gravity="end"
                    android:text="@string/new_address"
                    android:textColor="@color/yellow_text"
                    android:textSize="@dimen/_9sdp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/address_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                tools:itemCount="2"
                tools:listitem="@layout/product_list_item" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_11sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    android:gravity="start"
                    android:text="@string/payment_methods"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/new_payment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:fontFamily="@font/bold"
                    android:gravity="end"
                    android:text="@string/new_payment"
                    android:textColor="@color/yellow_text"
                    android:textSize="@dimen/_9sdp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/payment_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                tools:itemCount="2"
                tools:listitem="@layout/product_list_item" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:background="@drawable/app_btn_bg"
        android:fontFamily="@font/bold"
        android:text="@string/place_order"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp" />

</RelativeLayout>
