<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_2sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_10sdp">

            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/img"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:contentDescription="@string/product_img"
                app:siRadius="@dimen/_8sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_toEndOf="@+id/img"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/bold"
                    android:lines="1"
                    android:text="@string/order_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/regular"
                    android:lines="1"
                    android:text="3 Items"
                    android:textColor="@color/text_color_bold"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img"
                android:layout_marginTop="@dimen/_13sdp"
                android:layout_marginBottom="@dimen/_3sdp">

                <Button
                    android:id="@+id/review"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:background="@drawable/app_grey_bg"
                    android:fontFamily="@font/bold"
                    android:text="@string/review"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_9sdp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/re_order"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_32sdp"
                    android:layout_marginLeft="@dimen/_12sdp"
                    android:layout_marginRight="@dimen/_12sdp"
                    android:layout_weight="1"
                    android:background="@drawable/app_btn_bg"
                    android:fontFamily="@font/bold"
                    android:text="@string/re_order"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_9sdp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
