<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_2sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_7sdp">

            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/img"
                android:layout_width="@dimen/_53sdp"
                android:layout_height="@dimen/_53sdp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/product_img"
                app:siRadius="@dimen/_8sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_toEndOf="@+id/img"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/bold"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/regular"
                    android:lines="1"
                    android:textColor="@color/text_color_bold"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/bold"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/delivered"
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/bold"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:text="Delivered at 11:14 AM"
                    android:visibility="gone"
                    android:textColor="@color/text_color_bold"
                    android:textSize="@dimen/_9sdp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_alignParentEnd="true"
                android:id="@+id/qty_lt"
                android:visibility="gone"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/qty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/bold"
                    android:lines="1"
                    android:text="@string/quantity"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <TextView
                    android:id="@+id/count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/bold"
                    android:paddingLeft="@dimen/_3sdp"
                    android:paddingRight="@dimen/_3sdp"
                    android:lines="1"
                    android:text="@string/count_two"
                    android:textColor="@color/yellow_text"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fee_loc_lt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginEnd="@dimen/_7sdp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/app_btn_bg"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:fontFamily="@font/bold"
                        android:textSize="@dimen/_8sdp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_2sdp"
                        android:paddingLeft="@dimen/_17sdp"
                        android:paddingTop="@dimen/_2sdp"
                        android:paddingRight="@dimen/_17sdp"
                        android:paddingBottom="@dimen/_2sdp"
                        android:text="@string/add"
                        android:textColor="@color/text_color_white" />

                </LinearLayout>

                <include
                    android:id="@+id/count_lt"
                    layout="@layout/product_count"
                    android:visibility="gone" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
